--- a/web/package.json
+++ b/web/package.json
@@ -22,9 +22,9 @@
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-simple-typewriter": "^5.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.58.3",
+    "typewriter-effect": "^2.19.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-syntax-highlighter": "^15.5.6",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "autoprefixer": "^10.4.7",
